--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -17,5 +17,5 @@ jobs:
         uses: crazy-max/ghaction-github-labeler@v5
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          yaml-file: .github/labels.ym
+          yaml-file: .github/labels.yml
           # 기존에 있던건 삭제가 안됨, 수동으로 삭제해야함.
