--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Custom ###
+/src/main/resources/application-prod.yml
+/src/main/resources/application-dev.yml
+/docker-compose.dev.yml
+/docker-compose.prod.yml
