🧹chore: application.yml에 로컬 프로필 및 Docker Compose 설정 추가 (#1)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,10 @@
 spring:
+  profiles:
+    active: local  # 로컬 실행 시 기본 active
   application:
     name:
       modern-world-v2
+  docker:
+    compose:
+      enabled: true
+      file: docker-compose.yml
