🧹chore: application.yml 서버 포트 및 로그 레벨 설정 추가 (#1)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,10 @@ spring:
     compose:
       enabled: true
       file: docker-compose.yml
+
+server:
+  port: 8080
+
+logging:
+  level:
+    root: info
